# TextCorpusForge

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: base.yaml  paths.yaml
configs/datasets/: dgt.yaml  eubookshop.yaml  europarl.yaml  multiun.yaml  opensubtitles.yaml  unpc.yaml
configs/generated_ui/: canonicalize_from_ui.yaml  dgt.yaml  eubookshop.yaml  europarl.yaml  multiun.yaml  opensubtitles.yaml  unpc.yaml
configs/pipelines/: canonicalize.yaml
docs/: ALIGNMENT_STRATEGY.md  INPUT_LAYOUT.md  PROJECT_PLAN.md  SCHEMA_CONTRACT.md  STAGE1_CLOSEOUT.md  STAGE1_SCOPE.md  UI_CONTROLS.md
scripts/: launch_ui.py  run_pipeline.py  smoke_stage1.py
src/textforge/: cli.py  settings.py
src/textforge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/textforge/align/: monotonic.py
src/textforge/io/: archive.py  builders.py  manifest.py  parquet_writer.py  readers_ids.py  readers_parallel_text.py  readers_tmx.py  readers_tsv.py  readers_txt.py  readers_xml.py
src/textforge/normalize/: control_chars.py  encoding_fix.py  line_cleanup.py  markup.py  special_chars.py  unicode_norm.py  whitespace.py
src/textforge/orchestration/: __init__.py  pipeline.py  registry.py  stages.py
src/textforge/reports/: __init__.py  corpus_report.py  discard_report.py  sample_exports.py
src/textforge/schemas/: __init__.py  common.py  contract.py  document.py  parallel_pair.py  segment.py
src/textforge/ui/: __init__.py  app_state.py  config_builder.py  options_dialog.py  preview_runner.py  (+1 more)
tests/: test_alignment_loose.py  test_dataset_layout_configs.py  test_exports.py  test_normalizers.py  test_readers.py  test_runtime_limits.py  test_schema_contract.py  test_stage1_reports.py  test_token_cutoff.py  test_ui_cli_equivalence.py  test_ui_generation.py
(+6 files in other folders)
