[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "textforge"
version = "0.2.0"
description = "Pipeline reproducible para canonizar corpus y escribir silver Parquet para NLP/MT"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Felipe"}
]
dependencies = [
    "pyyaml>=6.0",
    "pyarrow>=16.0.0",
    "ftfy>=6.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
textforge = "textforge.cli:main"
textforge-ui = "textforge.ui.tkinter_app:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
